--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "firebase": "^12.2.1",
     "isbot": "^5.1.27",
     "lucide-react": "^0.542.0",
     "next-themes": "^0.4.6",
@@ -38,7 +39,8 @@
     "react-dom": "^19.1.0",
     "react-router": "^7.7.1",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "uuid": "^12.0.0"
   },
   "devDependencies": {
     "@react-router/dev": "^7.7.1",
@@ -46,6 +48,7 @@
     "@types/node": "^20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/uuid": "^10.0.0",
     "tailwindcss": "^4.1.4",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5.8.3",
