--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-router": "^7.7.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "type-fest": "^4.41.0",
     "uuid": "^12.0.0"
   },
   "devDependencies": {
