--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^19.1.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.0",
+    "react-loading-indicators": "^1.0.1",
     "react-router": "^7.7.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
