--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "isbot": "^5.1.27",
     "lucide-react": "^0.542.0",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.6",
     "react": "^19.1.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.0",
@@ -52,6 +53,7 @@
     "@react-router/dev": "^7.7.1",
     "@tailwindcss/vite": "^4.1.4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/uuid": "^10.0.0",
